--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,21 @@
 body{
   margin: 0px;
   font-family: 'Montserrat';
+
 }
+
+.ui.container {
+  margin-top: 10%;
+}
+
+.loginButton{
+ color: white !important;
+ font-family: 'Montserrat' !important;
+ position: relative !important;
+ overflow: hidden !important;
+
+}
+
 
 
 
