--- a/client/src/components/secondary-sliding-navigation/secondary-sliding-navigation/css/style.css
+++ b/client/src/components/secondary-sliding-navigation/secondary-sliding-navigation/css/style.css
@@ -11,6 +11,11 @@ Primary style
 
 
 
+a {
+  color: #7e4d7e;
+  text-decoration: none;
+}
+
 /* -------------------------------- 
 
 Main Components 
@@ -194,7 +199,7 @@ header::before {
 }
 .cd-main-nav a {
   display: block;
-  font-size: 1.2rem;
+  font-size: 0.8rem;
   padding: .9em 2em .9em 1em;
   border-bottom: 1px solid #33414a;
   color: #ffffff;
@@ -246,7 +251,7 @@ header::before {
   content: '';
   position: absolute;
   top: 50%;
-  margin-top: -1px;
+  margin-top: -5px;
   display: inline-block;
   height: 2px;
   width: 10px;
@@ -314,7 +319,7 @@ header::before {
     display: inline-block;
     padding: .8em;
     line-height: 1;
-    font-size: 1.2rem;
+    font-size: 0.9rem;
     border-bottom: none;
     /* Prevent .cd-subnav-trigger flicker is Safari */
     -webkit-transform: translateZ(0);
@@ -398,6 +403,7 @@ header::before {
     display: block;
     visibility: hidden;
     opacity: 0;
+    pointer-event: none;
   }
   .cd-main-nav.moves-out > li > a {
     -webkit-transform: translateX(0);
@@ -460,14 +466,15 @@ header::before {
 }
 
 .cd-main-content {
-  
   position: relative;
   z-index: 2;
   min-height: 100vh;
   padding-top: 50px;
+  
   background: #43cea2;  /* fallback for old browsers */
   background: -webkit-linear-gradient(to right, #185a9d, #43cea2);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #185a9d, #43cea2); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
   
   -webkit-transition: -webkit-transform 0.3s;
   -moz-transition: -moz-transform 0.3s;
@@ -483,14 +490,6 @@ header::before {
 @media only screen and (min-width: 1024px) {
   .cd-main-content {
     padding-top: 80px;
-    
-    background: #2BC0E4;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #2BC0E4, #EAECC6);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #2BC0E4, #EAECC6); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
-  
-    -webkit-clip-path: polygon(0 0, 100% 0%, 100% 84%, 0 51%);
-    clip-path: polygon(0 0, 100% 0%, 100% 84%, 0 51%);
   }
   .cd-main-content.nav-is-visible {
     -webkit-transform: translateX(0);
