--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,10 +15,26 @@ body{
 
 .profile {
   position:  relative;
-  height: 30% !important;
-  width: 50% !important;
+  height: auto !important;
+  width: auto !important;
   margin: 20px !important;
   text-align: center !important;
+}
+
+.cardmanagement{
+  position:  relative;
+  height: auto !important;
+  width: auto !important;
+  margin: 20px !important;
+  text-align: center !important;
+}
+
+.cardmanagement h2 {
+  margin: 25px;
+}
+
+.cardActions{
+  margin-top: 31px;
 }
 
 .portal {
@@ -29,7 +45,20 @@ header {
   opacity: 0.7;
 }
 
+.balance {
+  color: white !important;
+  font-size: 2.5em !important;
+  margin-top: 10%;
+}
 
+.balance2{
+  margin-top: 10%;
+  color: white; 
+}
+
+.cardInfo div.ten.wide.column  div{
+  text-align: center;
+}
 
 
 
