gotta find an async way to find the balance

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -4,6 +4,14 @@ body{
  
 }
 
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    /* display: none; <- Crashes Chrome on hover */
+    -webkit-appearance: none;
+    margin: 0; /* <-- Apparently some margin are still there even though it's hidden */
+}
+
+
 
 .loginButton{
  color: white !important;
@@ -28,6 +36,7 @@ body{
   margin: 20px !important;
   text-align: center !important;
 }
+
 
 .cardmanagement h2 {
   margin: 25px;
