environement variables added

--- a/client/src/components/secondary-sliding-navigation/secondary-sliding-navigation/css/style.css
+++ b/client/src/components/secondary-sliding-navigation/secondary-sliding-navigation/css/style.css
@@ -9,7 +9,7 @@ Primary style
   box-sizing: border-box;
 }
 
-
+/* just a style change to force a commit here weird test */
 
 a {
   color: #7e4d7e;
